# asst1-15618

./: .gitignore  CMakeLists.txt  printpathroot.c
prog1_mandelbrot_threads/: CMakeLists.txt  Makefile  mandelbrot-thread.ppm  mandelbrot.cpp  printpath.c
prog2_vecintrin/: CMakeLists.txt  functions.cpp  printpath2.c
prog3_mandelbrot_ispc/: CMakeLists.txt  mandelbrot.ispc
prog4_sqrt/: CMakeLists.txt  data.cpp
prog5_saxpy/: CMakeLists5.txt  main.cpp  saxpyStreaming.cpp
